--- a/txt/src/carouselView/nuget/Package/CarouselView.Package.csproj
+++ b/txt/src/carouselView/nuget/Package/CarouselView.Package.csproj
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), .props))\.props" />
   <PropertyGroup>
     <ProjectGuid>{F7F9D3A8-F71E-4428-913F-C37AE82CDB2F}</ProjectGuid>
   </PropertyGroup>
-  
   <ItemGroup>
     <ProjectReference Include="..\..\dev\lib\dotnet\CarouselView.csproj">
       <Project>{67F9D3A8-F71E-4428-913F-C37AE82CDB24}</Project>
@@ -18,37 +17,12 @@
       <Private>$(PrivateReference)</Private>
       <TargetFramework>MonoAndroid10</TargetFramework>
     </ProjectReference>
-    <ProjectReference Include="..\..\dev\lib\platform\monotouch\CarouselView.iOS.Classic.csproj">
-      <Project>{5b6b47c0-6e5b-41f8-8a89-1b010f7c59aa}</Project>
-      <Name>CarouselView.iOS.Classic</Name>
-      <Private>$(PrivateReference)</Private>
-      <TargetFramework>MonoTouch10</TargetFramework>
-    </ProjectReference>
     <ProjectReference Include="..\..\dev\lib\platform\xamarin.ios\CarouselView.iOS.csproj">
       <Project>{d5f2c2c7-a1a1-4286-a6ac-682177bfaa01}</Project>
       <Name>CarouselView.iOS</Name>
       <Private>$(PrivateReference)</Private>
       <TargetFramework>Xamarin.iOS10</TargetFramework>
     </ProjectReference>
-    <ProjectReference Include="..\..\dev\lib\platform\uap\CarouselView.UWP.csproj">
-      <Project>{5CAFE153-11C7-4CBD-ACFF-252458A02BF2}</Project>
-      <Name>CarouselView.UWP</Name>
-      <Private>$(PrivateReference)</Private>
-      <TargetFramework>uap10.0</TargetFramework>
-    </ProjectReference>
-    <ProjectReference Include="..\..\dev\lib\platform\wpa\CarouselView.WinRT.Phone.csproj">
-      <Project>{BEC76A98-B4BE-417B-909F-C4B5F545D320}</Project>
-      <Name>CarouselView.WinRT.Phone</Name>
-      <Private>$(PrivateReference)</Private>
-      <TargetFramework>wpa81</TargetFramework>
-    </ProjectReference>
-    <ProjectReference Include="..\..\dev\lib\platform\win\CarouselView.WinRT.Tablet.csproj">
-      <Project>{9402494B-B15F-4316-BB67-A6C037FCE063}</Project>
-      <Name>CarouselView.WinRT.Tablet</Name>
-      <Private>$(PrivateReference)</Private>
-      <TargetFramework>win81</TargetFramework>
-    </ProjectReference>
   </ItemGroup>
-
   <Import Project="$(TargetsDir)nugetPack.targets" />
 </Project>
