--- a/txt/src/carouselView/test/platform/wpa/CarouselView.Gallery.WinPhone.csproj
+++ b/txt/src/carouselView/test/platform/wpa/CarouselView.Gallery.WinPhone.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <OutputType>AppContainerExe</OutputType>
@@ -51,12 +51,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\dev\lib\platform\wpa\CarouselView.WinRT.Phone.csproj">
-      <Project>{bec76a98-b4be-417b-909f-c4b5f545d320}</Project>
-      <Name>CarouselView.WinRT.Phone</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
