--- a/txt/src/carouselView/test/platform/win/CarouselView.Gallery.Windows.csproj
+++ b/txt/src/carouselView/test/platform/win/CarouselView.Gallery.Windows.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <OutputType>AppContainerExe</OutputType>
@@ -50,12 +50,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\dev\lib\platform\win\CarouselView.WinRT.Tablet.csproj">
-      <Project>{9402494b-b15f-4316-bb67-a6c037fce063}</Project>
-      <Name>CarouselView.WinRT.Tablet</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
