--- a/txt/src/carouselView/.props
+++ b/txt/src/carouselView/.props
@@ -9,7 +9,7 @@
 
   <!--legacy-->
   <PropertyGroup>
-    <RootNamespace>Xamarin.Forms</RoWotNamespace>
+    <RootNamespace>Xamarin.Forms</RootNamespace>
   </PropertyGroup>
 
   <!--version-->
